--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width"/>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/jquery-migrate-1.4.1.min.js"></script>
-    <script src="js/jd.js"></script>
+  <script src="js/jd.js"></script>
   <title>정동극장_COPY</title>
   <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -65,7 +67,7 @@
           <div class="search_bar">
             <form class="search_bar_form">
               <input id="input" type="text" />
-              <a href="#" class="search_icon"><img src="images/nav/gnb_search.png" width="32"/></a>
+              <a href="#" class="search_icon"><img src="images/nav/gnb_search.png" alt="돋보기" width="32"/></a>
             </form>
           </div>
         </div>
@@ -73,8 +75,8 @@
     </header>
 
     <div class="main_slider">
-      <a class="mainPre"><img src="images/main/pre.png" /></a>
-      <a class="mainNxt"><img src="images/main/next.png" /></a>
+      <a class="mainPre"><img src="images/main/pre.png" alt="이전보기" /></a>
+      <a class="mainNxt"><img src="images/main/next.png" alt="이후보기"/></a>
 
       <div class="main_slider_showbox">
         <div class="main_slider_items">
@@ -139,11 +141,11 @@
         </div>
         <div class="audition_list">
           <ul>
-            <li><a href="#">2017 정동극장 제작공연 창작탈춤극 <동동> 아동 출연자 모집</a></li>
-            <li><a href="#">2017 정동극장 창작ing 창작탈춤극 <동동> 최종 합격자 공고</a></li>
-            <li><a href="#">2017 정동극장 창작ing 창작탈춤극 <동동> 심사 세부일정 공고</a></li>
-            <li><a href="#">2017 정동극장 제작공연 창작탈춤극 <동동> 배우·무용수 모집</a></li>
-            <li><a href="#">2017 정동극장 제작공연 창작탈춤극 <동동> 배우·무용수 모집</a></li>
+            <li><a href="#">2017 정동극장 제작공연 창작탈춤극 &lt;동동&gt; 아동 출연자 모집</a></li>
+            <li><a href="#">2017 정동극장 창작ing 창작탈춤극 &lt;동동&gt; 최종 합격자 공고</a></li>
+            <li><a href="#">2017 정동극장 창작ing 창작탈춤극 &lt;동동&gt; 심사 세부일정 공고</a></li>
+            <li><a href="#">2017 정동극장 제작공연 창작탈춤극 &lt;동동&gt; 배우·무용수 모집</a></li>
+            <li><a href="#">2017 정동극장 제작공연 창작탈춤극 &lt;동동&gt; 배우·무용수 모집</a></li>
           </ul>
           <p class="notice_more"> → 더보기</p>
         </div>
@@ -159,8 +161,8 @@
         </div>
       </div>
         <div class="notice_slider">
-          <a class="notice_pre"><img src="images/notice/notice_pre.png" /></a>
-          <a class="notice_nxt"><img src="images/notice/notice_next.png" /></a>
+          <a class="notice_pre"><img src="images/notice/notice_pre.png" alt="이전버튼"/></a>
+          <a class="notice_nxt"><img src="images/notice/notice_next.png" alt="이후버튼"/></a>
 
             <div class="notice_slider_showbox">
               <div class="notice_slider_items">
@@ -181,12 +183,12 @@
 
     <div class="picto">
       <ul class="picto_ul">
-        <li><a href="#"><img src="images/picto/picto1.png" /><br /><span>예매하기</span></a></li>
-        <li><a href="#"><img src="images/picto/picto2.png" /><br /><span>체험프로그램</span></a></li>
-        <li><a href="#"><img src="images/picto/picto3.png" /><br /><span>정동기별단</span></a></li>
-        <li><a href="#"><img src="images/picto/picto4.png" /><br /><span>예매환불규정</span></a></li>
-        <li><a href="#"><img src="images/picto/picto5.png" /><br /><span>자주하는질문</span></a></li>
-        <li><a href="#"><img src="images/picto/picto6.png" /><br /><span>1:1문의</span></a></li>
+        <li><a href="#"><img src="images/picto/picto1.png" alt="예매하기"/><br /><span>예매하기</span></a></li>
+        <li><a href="#"><img src="images/picto/picto2.png" alt="체험프로그램"/><br /><span>체험프로그램</span></a></li>
+        <li><a href="#"><img src="images/picto/picto3.png" alt="정동기별단"/><br /><span>정동기별단</span></a></li>
+        <li><a href="#"><img src="images/picto/picto4.png" alt="예매환불규정"/><br /><span>예매환불규정</span></a></li>
+        <li><a href="#"><img src="images/picto/picto5.png" alt="자주하는질문"/><br /><span>자주하는질문</span></a></li>
+        <li><a href="#"><img src="images/picto/picto6.png" alt="1:1문의"/><br /><span>1:1문의</span></a></li>
       </ul>
     </div>
   </section>
@@ -198,20 +200,20 @@
         <h2 class="promo_title">정동프로모션</h2>
         <p>1 of 5</p>
         <div class="promo_ul">
-          <a class="pr_pre"><img src="images/promo/promo_pre.png" /></a>
-          <a class="pr_nxt"><img src="images/promo/promo_next.png" /></a>
-          <a><img src="images/promo/promo_play.png" /></a>
-          <a><img src="images/promo/promo_more.png" /></a>
+          <a class="pr_pre"><img src="images/promo/promo_pre.png" alt="이전버튼"/></a>
+          <a class="pr_nxt"><img src="images/promo/promo_next.png" alt="이후버튼" /></a>
+          <a><img src="images/promo/promo_play.png" alt="재생"/></a>
+          <a><img src="images/promo/promo_more.png" alt="정지" /></a>
       </div>
     </div>
 
     <div class="promo_slider_showbox">
       <div class="promo_slider_items">
-        <a href="#"><img src="images/promo/promo_2.png" /></a>
-        <a href="#"><img src="images/promo/promo_1.png" /></a>
-        <a href="#"><img src="images/promo/promo_3.png" /></a>
-        <a href="#"><img src="images/promo/promo_4.png" /></a>
-        <a href="#"><img src="images/promo/promo_5.png" /></a>
+        <a href="#"><img src="images/promo/promo_2.png" alt="창작탈춤<동동> 예매처 오픈기념 특별할인"/></a>
+        <a href="#"><img src="images/promo/promo_1.png" alt="련 패키지 할인"/></a>
+        <a href="#"><img src="images/promo/promo_3.png" alt="정동마당 작은극장"/></a>
+        <a href="#"><img src="images/promo/promo_4.png" alt="하이라이트석 오픈 기념"/></a>
+        <a href="#"><img src="images/promo/promo_5.png" alt="경주 야경 투어 프로모션"/></a>
       </div>
     </div>
     </div>
@@ -229,7 +231,7 @@
         <a href="#"><p>최신 뉴스레터 보기</p></a>
       </div>
       <a href="#" class="news_all_btn">
-        <img src="images/news/news_more.png" />
+        <img src="images/news/news_more.png" alt="뉴스 더보기 버튼"/>
       </a>
 
       <div class="news_video_slider">
@@ -239,27 +241,27 @@
           <a></a>
         </div>
         <h2 class="news_video_title"><span class="new">정동</span>극장 공연 영상</h2>
-          <a class="news_video_slide_pre_btn"><img src="images/news/news_pre.png" /></a>
-          <a class="news_video_slide_next_btn"><img src="images/news/news_next.png" /></a>
+          <a class="news_video_slide_pre_btn"><img src="images/news/news_pre.png" alt="이전보기"/></a>
+          <a class="news_video_slide_next_btn"><img src="images/news/news_next.png" alt="이후보기"/></a>
         <div class="news_video_slider_showbox">
           <div class="news_video_slider_items">
             <ul>
-              <li><a href="#"><img src="images/news/news_1.jpg" width="260px"/><p>
+              <li><a href="#"><img src="images/news/news_1.jpg" alt="련 홍보영상"/><p>
                 2017 정동극장 전통시리즈<br />&lt;련, 다시 피는 꽃&gt; 홍보영상
               </p></a></li>
-              <li><a href="#"><img src="images/news/news_2.jpg" width="260px"/><p>
+              <li><a href="#"><img src="images/news/news_2.jpg" alt="동동 비긴즈"/><p>
                 2017 정동극장 창작ing '동동'<br />제 2화 '동동 비긴즈'
               </p></a></li>
-              <li><a href="#"><img src="images/news/news_3.jpg" width="260px"/><p>
+              <li><a href="#"><img src="images/news/news_3.jpg" alt="하이라이트가 소개하는 다시 피는 꽃"/><p>
                 하이라이트가 소개하는<br /> &lt;련(蓮), 다시 피는 꽃&gt;
               </p></a></li>
-              <li><a href="#"><img src="images/news/news_4.jpg" width="260px"/><p>
+              <li><a href="#"><img src="images/news/news_4.jpg" alt="탈춤입덕하기"/><p>
                 2017 정동극장 창작ing &lt;동동&gt;<br />&lt;동동&gt;으로 탈춤 입덕하기 제 1.9화
               </p></a></li>
-              <li><a href="#"><img src="images/news/news_5.jpg" width="260px"/><p>
+              <li><a href="#"><img src="images/news/news_5.jpg" alt="입덕 오디션 홍보영상"/><p>
                 창작탈춤극 &lt;동동&gt;<br />제 1화:입덕 오디션 편 홍보 영상
               </p></a></li>
-              <li><a href="#"><img src="images/news/news_1.jpg" width="260px"/><p>
+              <li><a href="#"><img src="images/news/news_1.jpg" alt="련 홍보영상"/><p>
                 2017 정동극장 전통시리즈<br />&lt;련(蓮), 다시 피는 꽃&gt; 홍보영상
               </p></a></li>
             </ul>
@@ -277,7 +279,7 @@
         <div class="news_sns_content_facebook">
           <ul class="news_sns_content_facebook_ul">
             <li><a href="#">
-              <img src="images/sns/face.png" class="face_icon" width="32px"/>
+              <img src="images/sns/face.png" class="face_icon" width="32" alt="페이스북 아이콘"/>
               <p>정동극장 - Jeongdong theater</p>
               <p>2017-10-13 02:45:00</p>
               <p>정오의 예술마당 - 가을마당 10월에는 2017 정동극장 청년국악인큐베이팅
@@ -286,7 +288,7 @@
                 하나인 기 발랄한 청년국악  공연에서 소개된 재기 발랄...</p>
             </a></li>
             <li><a href="#">
-              <img src="images/sns/face.png" class="face_icon" width="32px"/>
+              <img src="images/sns/face.png" class="face_icon" width="32" alt="인스타그램 아이콘"/>
               <p >정동극장 - Jeongdong theater</p>
               <p>2017-10-13 02:45:00</p>
               <p>정오의 예술마당 - 가을마당 10월에는 2017 정동극장 청년국악인큐베이팅
@@ -295,19 +297,19 @@
                 하나인 기 발랄한 청년국악  공연에서 소개된 재기 발랄...</p>
             </a></li>
           </ul>
-          <a href="#"><img src="images/sns/face_go.png" /></a>
+          <a href="#"><img src="images/sns/face_go.png" alt="페이스북으로 가기" /></a>
 
         </div>
         <div class="news_sns_content_insta">
           <ul class="news_sns_content_insta_ul">
-            <li><a href="#"><img src="images/sns/insta1.jpg" /></a></li>
-            <li><a href="#"><img src="images/sns/insta2.jpg" /></a></li>
-            <li><a href="#"><img src="images/sns/insta3.jpg" /></a></li>
-            <li><a href="#"><img src="images/sns/insta4.jpg" /></a></li>
-            <li><a href="#"><img src="images/sns/insta5.jpg" /></a></li>
-            <li><a href="#"><img src="images/sns/insta6.jpg" /></a></li>
+            <li><a href="#"><img src="images/sns/insta1.jpg" alt="인스타그램1"/></a></li>
+            <li><a href="#"><img src="images/sns/insta2.jpg" alt="인스타그램2"/></a></li>
+            <li><a href="#"><img src="images/sns/insta3.jpg" alt="인스타그램3"/></a></li>
+            <li><a href="#"><img src="images/sns/insta4.jpg" alt="인스타그램4"/></a></li>
+            <li><a href="#"><img src="images/sns/insta5.jpg" alt="인스타그램5"/></a></li>
+            <li><a href="#"><img src="images/sns/insta6.jpg" alt="인스타그램6"/></a></li>
           </ul>
-          <a href="#"><img src="images/sns/insta_go.png" /></a>
+          <a href="#"><img src="images/sns/insta_go.png" alt="인스타그램으로 가기"/></a>
         </div>
       </div>
     </div>
@@ -347,7 +349,7 @@
         <select>
         <option value="">관련기관 사이트</option>
       </select>
-        <button type="site_button">이동</button>
+        <button type="button">이동ㄴ</button>
 
       </div>
     </div>
